--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=103.129.220.250
 DB_PORT=3306
 DB_DATABASE=polreste_skck
 DB_USERNAME=polreste_abdasis
-DB_PASSWORD="*#A5iSd3V%$"
+DB_PASSWORD='*#A5iSd3V%$'
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
