--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=polrestegal.com 
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=polreste_skck
 DB_USERNAME=polreste_abdasis
