--- a/.env
+++ b/.env
@@ -7,10 +7,10 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=db4free.net
 DB_PORT=3306
-DB_DATABASE=polreste_skck
-DB_USERNAME=polreste_abdasis
+DB_DATABASE=dbskck
+DB_USERNAME=abdasis
 DB_PASSWORD='*#A5iSd3V%$'
 
 BROADCAST_DRIVER=log
