--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=db4free.net
 DB_PORT=3306
 DB_DATABASE=dbskck
 DB_USERNAME=abdasis
