--- a/.env
+++ b/.env
@@ -6,19 +6,19 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-# DB_CONNECTION=mysql
-# DB_HOST=db4free.net
-# DB_PORT=3306
-# DB_DATABASE=dbskck
-# DB_USERNAME=abdasis
-# DB_PASSWORD='*#A5iSd3V%$'
-
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=db4free.net
 DB_PORT=3306
-DB_DATABASE=e-skck-v2
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=dbskck
+DB_USERNAME=abdasis
+DB_PASSWORD='*#A5iSd3V%$'
+
+# DB_CONNECTION=mysql
+# DB_HOST=localhost
+# DB_PORT=3306
+# DB_DATABASE=e-skck-v2
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
